syntax="proto3";

package server;

option go_package= "./server/pb";

service Transactions {
    rpc CreateTransaction(CreateTransactionRequest) returns (CreateTransactionResponse)  {}
}

message CreateTransactionRequest {
    float Amount=1;
    string Currency=2;
}

message CreateTransactionResponse {
    string Uid=1;
    float Amount=2;
    string Currency=3;
}
